Implementa cadastro de paciente

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 # Permitir Hibernate gerar SQL otimizada para um banco especifico
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle12cDialect
+
+# spring.jpa.defer-datasource-initialization=true
+# spring.sql.init.mode=always
+# https://www.baeldung.com/spring-boot-data-sql-and-schema-sql
