Adiciona foreign key de medico na tabela consultas e atualiza os métodos de consulta.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle12cDialect
 # spring.jpa.defer-datasource-initialization=true
 # spring.sql.init.mode=always
 # https://www.baeldung.com/spring-boot-data-sql-and-schema-sql
+# usar data.sql e schema.sql
+# https://stackoverflow.com/questions/38040572/spring-boot-loading-initial-data
