--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,13 +12,18 @@ spring.datasource.validationQuery=SELECT 1
 spring.jpa.show-sql=true
 
 # Hibernate ddl auto (create, create-drop, update)
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 
 # Permitir Hibernate gerar SQL otimizada para um banco especifico
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle12cDialect
 
-# spring.jpa.defer-datasource-initialization=true
-# spring.sql.init.mode=always
+# By default, data.sql scripts get executed before the Hibernate is initialized.
+# We need Hibernate to create our tables before inserting the data into them:
+spring.jpa.defer-datasource-initialization=true
+# Permite usar script-based initalization: (via data.sql e schema.sql)
+spring.sql.init.mode=always
+
+#--------------------------------------------------------------
+
 # https://www.baeldung.com/spring-boot-data-sql-and-schema-sql
-# usar data.sql e schema.sql
 # https://stackoverflow.com/questions/38040572/spring-boot-loading-initial-data
