--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Conexao com BD
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521/devinhouse
-spring.datasource.username=admin
-spring.datasource.password=admin
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521/labmedicalbd
+spring.datasource.username=system
+spring.datasource.password=oracle
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
 # Manter a conexao ativa mesmo se nao utilizada por muito tempo
